[tool.poetry]
name = "mlflow_xgboost_proba"
version = "0.1.0"
description = "MLflow XGBoost flavour with probabilities"
authors = ["Sergey Panfilov <sergray@gmail.com>"]
repository = "https://github.com/sergray/mlflow-xgboost-proba"
license = "Apache-2.0"
readme = "README.md"
packages = [
  {include = "mlflow_xgboost_proba"}
]

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.13.1"
xgboost = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
ipython = "^8.25.0"
ipdb = "^0.13.13"
psutil = "^5.9.8"
ruff = "^0.4.8"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["mlflow_xgboost_proba"]
disallow_untyped_defs = "False"
disallow_any_unimported = "False"
no_implicit_optional = "False"
check_untyped_defs = "False"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["mlflow_xgboost_proba"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[project.license]
file = "LICENSE"
